--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "alertifyjs": "^1.11.1",
+    "angular2-jwt": "^0.2.3",
     "bootstrap": "^4.1.1",
+    "bootswatch": "^4.1.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
